syntax = "proto3";

package user;

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool isValid = 1;
  string userId =2;
}

service UserService {
    rpc validate (TokenRequest) returns (TokenResponse);
}